test_suite/tests/macros/ui/invalid_inject_name_value.stderr
error: custom attribute panicked
 --> tests/macros/ui/invalid_inject_name_value.rs:3:1
  |
3 | #[provide]
  | ^^^^^^^^^^
  |
  = help: message: invalid #[inject] signature, expected: #[inject(param, name = "value")]
