test_suite/tests/macros/ui/invalid_inject_name_value.rs
use dilib::provide;

#[provide]
#[inject(s, data="data")]
fn get_data(s: usize) -> String {
    String::from("")
}

fn main(){}